Out-of-view check of fixed position element in frame is incorrect when page is scaled https://bugs.webkit.org/show_bug.cgi?id=104943

Reviewed by Simon Fraser.

Source/WebCore:

Use frameScaleFactor instead of pageScaleFactor to scale the layer bounds.

Tests: compositing/layer-creation/fixed-position-out-of-view-scaled-iframe-scroll.html
       compositing/layer-creation/fixed-position-out-of-view-scaled-iframe.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::requiresCompositingForPosition):

LayoutTests:

Test cases.

* compositing/layer-creation/fixed-position-out-of-view-scaled-iframe-expected.txt: Added.
* compositing/layer-creation/fixed-position-out-of-view-scaled-iframe-scroll-expected.txt: Added.
* compositing/layer-creation/fixed-position-out-of-view-scaled-iframe-scroll.html: Added.
* compositing/layer-creation/fixed-position-out-of-view-scaled-iframe.html: Added.
* compositing/layer-creation/resources/fixed-position-out-of-view-frame-scroll.html: Added.
* compositing/layer-creation/resources/fixed-position-out-of-view-frame.html: Added.


Canonical link: https://commits.webkit.org/123218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137697 268f45cc-cd09-0410-ab3c-d52691b4dbfc